<resources>
    <string name="app_name">特百惠食谱</string>

    <string name="export">导出</string>

    <string name="no_data_tip">暂无食谱数据,请点击左上角添加按钮添加食谱数据</string>

    <string name="title_add">添加食谱</string>
    <string name="title_detail">食谱详情</string>

    <string name="name">名称</string>
    <string name="seasoning">原料:</string>
    <string name="method">做法:</string>
    <string name="remark">备注:</string>

    <string name="hint_name">请输入添加菜谱名称</string>
    <string name="hint_seasoning">请输入所需原料</string>
    <string name="hint_method">请输入做法</string>
    <string name="hint_remark">请输入备注信息</string>
    <string name="save">保存</string>

    <string name="to_detail">查看详情</string>
    <string name="to_delete">删除菜谱</string>
    <string name="to_change_info">修改信息</string>
    <string name="cancel">取消</string>
</resources>
